<resources>
    <string name="app_name">Wiffleball Scorekeeper App</string>
    <string name="load_text">Load</string>
    <string name="delete_text">delete</string>
    <string name="cancel_text">@android:string/cancel</string>
    <string name="save_text">save</string>
    <string name="dont_save_text">don\'t save</string>
    <string name="continue_game_text">Continue Game</string>
    <string name="new_game_text">New Game</string>
    <string name="load_game_text">Load Game</string>
    <string name="exit_text">Exit</string>
    <string name="number_of_innings_text">Number of Innings:</string>
    <string name="away_team_name_text">Away Team Name:</string>
    <string name="away_default_name">AWAY</string>
    <string name="home_team_name_text">Home Team Name:</string>
    <string name="home_default_name">HOME</string>
    <string name="start_game_text">Start Game</string>
    <string name="empty_slot_text">Slot %d</string>
    <string name="game_heading_text">%d-inning game</string>
    <string name="inning_text">TOP 1</string>
    <string name="runs_abbreviation">R</string>
    <string name="hits_abbreviation">H</string>
    <string name="walks_abbreviation">W</string>
    <string name="initial_value_zero">0</string>
    <string name="count_text">%d - %d</string>
    <string name="message_placeholder">Message</string>
    <string name="base_drawable_description">Base runner indicator</string>
    <string name="out_drawable_description">Out indicator</string>
    <string name="ball_text">Ball</string>
    <string name="strike_text">Strike</string>
    <string name="hit_text">Hit</string>
    <string name="out_text">Out</string>
    <string name="undo_text">Undo</string>
    <string name="redo_text">Redo</string>
    <string name="quit_text">Quit</string>
    <string name="single_text">Single</string>
    <string name="double_text">Double</string>
    <string name="triple_text">Triple</string>
    <string name="homerun_text">Homerun</string>
    <string name="flyout_text">Flyout</string>
    <string name="groundout_text">Groundout</string>
    <string name="done_text">Done</string>
    <string name="play_ball_text">Play Ball!</string>
    <string name="undo_error_text">Cannot undo further…</string>
    <string name="redo_error_text">Cannot redo further…</string>
    <string name="next_inning_text">Switch sides</string>
    <string name="next_batter_text">Next batter</string>
    <string name="game_loaded_text">Game loaded…</string>
    <string name="no_slot_selected">Please first select a game slot…</string>
    <string name="no_saved_games">No saved games to %s…</string>
    <string name="game_saved_text">Game saved…</string>
    <string name="game_not_saved_text">Game not saved…</string>
</resources>