<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activities.SetupNewGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/number_of_innings_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/number_of_innings_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/away_team_name_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/away_name_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/away_default_name"
                    android:inputType="textCapCharacters"
                    android:maxLength="15"
                    android:autofillHints="name" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_team_name_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/home_name_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/home_default_name"
                    android:inputType="textCapCharacters"
                    android:maxLength="15"
                    android:autofillHints="name" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/start_game_text" />

        <Button
            android:id="@+id/cancel_new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/cancel_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>